--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -12,11 +12,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RavenDB.Embedded" Version="4.2.103" />
+    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="RavenDB.Embedded" Version="4.2.104" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DumpExplorer.Core\DumpExplorer.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
